# nahida

./: README.md  pyproject.toml
example/: power_iteration.py  power_iteration_compact.py
nahida/: __init__.py  _types.py  connection.py  graph.py  node.py  utils.py
nahida/core/: _types.py  connection.py  context.py  edge.py  graph.py  node.py
nahida/ops/: __init__.py  basic.py
src/nahida/: __init__.py  chained.py  creation.py  nodetype.py  ops.py
src/nahida/core/: __init__.py  _objbase.py  context.py  edge.py  errors.py  executor.py  expr.py  graph.py  node.py  port.py  scheduler.py
