[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nahida"
version = "0.1.0"
authors = [
    { name = "AlbertZyy" }
]
description = "A Python framework for building general computational graphs"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
homepage = "https://github.com/AlbertZyy/nahida"